--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ pyflakes==3.0.1
 python-dotenv==1.0.0
 python-telegram-bot==20.0
 rfc3986==1.5.0
+sentry-sdk==1.24.0
 sniffio==1.3.0
+urllib3==1.26.16
